commit before pull

--- a/lab3basic/todo
+++ b/lab3basic/todo
@@ -1,11 +1,14 @@
 Float
 
 Function calls
+return remaining rest done
+
 
 if-while-for (done)
 printf
 
-type-casting
+type-casting(done)
 
 array handling
 struct handling
+pointer handling
