--- a/lab3basic/todo
+++ b/lab3basic/todo
@@ -1,4 +1,4 @@
-Float
+Float -> done bitches!!!!!!!!!!!!
 
 Function calls
 return remaining rest done
@@ -9,9 +9,15 @@ printf
 
 type-casting(done)
 
-array handling
+array handling -> done!!!!!!!!!!
 struct handling
-pointer handling
+pointer handling ->done
+
 
 opsingle
-* & !
+* & -> done
+!
+
+Stringconstant
+
+and, or to be changed
